--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <h1>Under Construction</h1>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/3-column-review/favicon.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/3-column-review/logo192.png"/><link rel="manifest" href="/3-column-review/manifest.json"/><title>3 Col Preview</title><script defer="defer" src="/3-column-review/static/js/main.150fb1d8.js"></script><link href="/3-column-review/static/css/main.27ae518f.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
